<resources>
    <string name="app_name">FishingApp</string>
    <string name="preference">FishingApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="navigation_drawer_items_array">
        <item>MY PROFILE</item>
        <item>MY FISH</item>
        <item>MY FRIENDS</item>
        <item>FIND FRIENDS</item>
        <item>MY ALBUMS</item>
        <item>MY FISHING LOG</item>
        <item>MY EPISODE LIST</item>
        <item>FISHING RECORD</item>
        <item>CHANGE PASSWORD</item>
    </string-array>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin_txt">Sign in</string>
    <string name="or_txt">Or</string>
    <string name="Signup_txt">Sign up</string>
    <string name="new_user_txt">New user?</string>
    <string name="watch_now_txt">Watch Now</string>
    <string name="facebook_txt">Facebook</string>
    <string name="ok_txt">Ok</string>
    <string name="network_error">Please check your internet connection!</string>
    <string name="submit_txt">Submit</string>
    <string name="error_txt">Error</string>
    <string name="facebook_no_email">This account doesn\'t have email</string>
    <string name="old_pwd_txt">Old Password</string>
    <string name="new_pwd_txt">New Password</string>
    <string name="confrm_pwd_txt">Confirm Password</string>
    <string name="change_pwd_title">Change Password</string>
    <string name="email_txt">Email</string>
    <string name="empty_email_id">E-Mail ID cannot be blank</string>
    <string name="empty_confirm_email_id">Confirm E-Mail ID cannot be blank</string>
    <string name="empty_first_name">First name cannot be blank</string>
    <string name="empty_last_name">Last name cannot be blank</string>
    <string name="email_confirm_doesnot_match">Email ID and confirm Email ID doesn\'t match</string>
    <string name="login_error">Email password doesnt match</string>
    <string name="password_not_match">Password and Confirm Password doesn\'t match</string>
    <string name="change_password_success">Password changed successfuly</string>
    <string name="change_pwd_error">Old password doesn\'t match</string>
    <string name="success_txt">Success</string>
    <string name="empty_list">No data found</string>
    <string name="if_registered">If you are a registered user?</string>
    <string name="email_address">E-Mail address</string>
    <string name="confirm_email_address">Confirm e-mail address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="about_me">About Me</string>
    <string name="fishing_preferences">Fishing Preferences</string>
    <string name="bait_fishing">Bait Fishing</string>
    <string name="exotic_fishing">Exotic Fishing</string>
    <string name="freshwater_fishing">Freshwater Fishing</string>
    <string name="freshwater_flyfishing">Freshwater Flyfishing</string>
    <string name="game_fishing">Game Fishing</string>
    <string name="jigging_fishing">Jigging Fishing</string>
    <string name="lure_fishing">Lure Fishing</string>
    <string name="popper_fishing">Popper Fishing</string>
    <string name="saltwaterfly_fishing">Saltwaterfly Fishing</string>
    <string name="soft_plastic_lure_fishing">Soft Plastic Lure Fishing</string>
    <string name="sport_fishing">Sport Fishing</string>
    <string name="bait_fishing_index">1</string>
    <string name="exotic_fishing_index">7</string>
    <string name="freshwater_fishing_index">2</string>
    <string name="freshwater_flyfishing_index">11</string>
    <string name="game_fishing_index">3</string>
    <string name="jigging_fishing_index">8</string>
    <string name="lure_fishing_index">4</string>
    <string name="popper_fishing_index">9</string>
    <string name="saltwaterfly_fishing_index">5</string>
    <string name="soft_plastic_lure_fishing_index">10</string>
    <string name="sport_fishing_index">6</string>
    <string name="ok">Ok</string>
    <string name="my_profile_txt">My Profile</string>
    <string name="add_detail_txt">Add Details</string>
    <string name="save_txt">Save</string>
    <string name="title_txt">Title</string>
    <string name="location_name_txt">Location name</string>
    <string name="street_address_txt">Street, Address</string>
    <string name="select_nultiple_countries">Select Multiple Countries</string>
</resources>