<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/savebtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20">

            <EditText
                android:id="@+id/about_me"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="@dimen/dp_10"
                android:scrollbars="vertical"
                android:hint="@string/about_me"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_20"
                android:text="@string/fishing_preferences"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/checkbox_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5">

                    <CheckBox
                        android:id="@+id/cb_0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/bait_fishing_index"
                        android:text="@string/bait_fishing" />

                    <CheckBox
                        android:id="@+id/cb_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/exotic_fishing_index"
                        android:text="@string/exotic_fishing" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5">

                    <CheckBox
                        android:id="@+id/cb_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/freshwater_fishing_index"
                        android:text="@string/freshwater_fishing" />

                    <CheckBox
                        android:id="@+id/cb_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/freshwater_flyfishing_index"

                        android:text="@string/freshwater_flyfishing" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5">

                    <CheckBox
                        android:id="@+id/cb_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/game_fishing_index"
                        android:text="@string/game_fishing" />

                    <CheckBox
                        android:id="@+id/cb_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/jigging_fishing_index"
                        android:text="@string/jigging_fishing" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5">

                    <CheckBox
                        android:id="@+id/cb_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/lure_fishing_index"
                        android:text="@string/lure_fishing" />

                    <CheckBox
                        android:id="@+id/cb_7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/popper_fishing_index"
                        android:text="@string/popper_fishing" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5">

                    <CheckBox
                        android:id="@+id/cb_8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/saltwaterfly_fishing_index"
                        android:text="@string/saltwaterfly_fishing" />

                    <CheckBox
                        android:id="@+id/cb_9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/soft_plastic_lure_fishing_index"
                        android:text="@string/soft_plastic_lure_fishing" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cb_10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:tag="@string/sport_fishing_index"
                        android:text="@string/sport_fishing" />

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="1"
                        android:text=""
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/button_rounded_color_shape"
        android:text="@string/save"
        android:textColor="@color/white" />
</RelativeLayout>