<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_60"
    android:paddingRight="@dimen/dp_60"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pwd_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/login_btn"
        android:layout_marginTop="@dimen/dp_30"/>
    <EditText
        android:id="@+id/old_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edittext_bg"
        android:hint="@string/old_pwd_txt"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_30"/>
    <EditText
        android:id="@+id/new_pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edittext_bg"
        android:hint="@string/new_pwd_txt"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="@dimen/dp_30"/>
    <EditText
        android:id="@+id/cnf_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edittext_bg"
        android:hint="@string/confrm_pwd_txt"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_30"/>

    <Button
        android:id="@+id/changePwdBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/button_oval_shape"
        android:text="@string/submit_txt"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_30"/>
</LinearLayout>
    </ScrollView>