<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scroll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:paddingTop="@dimen/dp_200">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="@dimen/dp_60"
        android:paddingRight="@dimen/dp_60"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="20dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:drawableLeft="@drawable/username"
                android:textColorHint="@color/white"
                android:drawablePadding="@dimen/dp_5"
                android:textColor="@color/white"
                android:backgroundTint="@color/edittext_bg"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:drawableLeft="@drawable/lock_ic"
                android:drawablePadding="@dimen/dp_5"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/edittext_bg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            >
            <TextView
                android:id="@+id/forgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/drawer_bg"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/pwd_ic"
                android:layout_marginTop="@dimen/dp_10"/>
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/button_oval_shape"
                android:text="@string/signin_txt"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_30"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center">
                <View
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/drawer_bg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_txt"
                    android:textColor="@color/drawer_bg"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"/>
                <View
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/drawer_bg"/>
            </LinearLayout>
            <Button
                android:id="@+id/fbBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/button_oval_shape"
                android:text="@string/facebook_txt"
                 android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_30"/>
            <Button
                android:id="@+id/watchBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/button_oval_shape"
                android:text="@string/watch_now_txt"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_30"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp_50">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_txt"
                    android:textColor="@color/white"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Signup_txt"
                    android:textColor="@color/drawer_bg"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>